--- a/index.html
+++ b/index.html
@@ -366,11 +366,78 @@
             </ol>
           </dd>
           <dt id="conclusion-14">Тисніть на себе.</dt>
-          <dd></dd>
+          <dd>
+            <p>
+              Уявіть, що вам потрібно поїхати з міста на місяць, і працюйте так,
+              наче мусите завершити всі важливі справи до від’їзду.
+            </p>
+            <ol>
+              <li>
+                Для того щоб реалізувати свій повний потенціал, ви повинні
+                сформувати звичку докладати зусиль, а не чекати, що хтось інший
+                прийде і зробить це за вас. Вам треба обрати своїх жаб, а тоді
+                змусити себе з’їсти їх усіх у порядку важливості
+              </li>
+              <li>
+                Докладайте зусиль. Уявіть, що ви – приклад для інших. Підвищуйте
+                планку для себе. Виставлені вами для самого себе стандарти
+                роботи й поведінки повинні бути вищими, ніж будь-хто міг би для
+                вас виставити
+              </li>
+              <li>
+                Створюйте уявні дедлайни. Щодня уявляйте, що ви отримали
+                термінове повідомлення і завтра вам треба виїхати з міста на
+                місяць. Якби вам потрібно було залишити місто на місяць, що ви
+                точно зробили б перед від’їздом? Якою б не була відповідь,
+                негайно беріться до справи
+              </li>
+            </ol>
+          </dd>
           <dt id="conclusion-15">Максимізуйте свої особисті сили.</dt>
-          <dd></dd>
+          <dd>
+            <ol>
+              <li>Не викладайтесь на 100 відсотків, коли працюєте</li>
+              <li>Працюйте у своєму темпі</li>
+              <li>Виділяйте достатньо часу на свій сон</li>
+              <li>Дбайте про своє фізичне здоров’я</li>
+              <li>
+                Проаналізуйте свої звички. Визначте ті, які шкодять вам і
+                виправте їх
+              </li>
+            </ol>
+          </dd>
           <dt id="conclusion-16">Мотивуйте себе діяти.</dt>
-          <dd></dd>
+          <dd>
+            <ol>
+              <li>
+                Контролюйте свій внутрішній діалог. Кажіть собі: "Я це можу"!
+              </li>
+              <li>
+                <p>Будьте оптимістом, бо:</p>
+                <ul>
+                  <li>
+                    Оптимісти шукають позитив і переваги для себе в будь-якій
+                    ситуації.
+                  </li>
+                  <li>
+                    Оптимісти завжди шукають корисний урок у будь-яких труднощах
+                    та неприємностях
+                  </li>
+                  <li>
+                    Оптимісти шукають розв’язання проблеми замість звинувачень
+                  </li>
+                  <li>Оптимісти постійно думають і говорять про свої цілі</li>
+                </ul>
+              </li>
+              <li>
+                Контролюйте власні думки. Думайте тілько про те, чого ви хочете
+              </li>
+              <li>
+                Мисліть позитивно, не знаходьте відмовки, сконцентруйтесь на
+                тому, як покращити власне життя
+              </li>
+            </ol>
+          </dd>
           <dt id="conclusion-17">Позбудьтесь технологічного рабства.</dt>
           <dd>
             <ol>
@@ -414,7 +481,23 @@
             </ol>
           </dd>
           <dt id="conclusion-19">Створюйте великі блоки часу.</dt>
-          <dd></dd>
+          <dd>
+            <ol>
+              <li>Виділіть проміжок часу на важливі завдання кожного дня</li>
+              <li>Використовуйте органайзер</li>
+              <li>Рахуйте кожну хвилину</li>
+              <li>
+                Постійно думайте про способи заощадити, спланувати та об’єднати
+                великі проміжки часу. Використовуйте його для самих необхідних
+                завдань
+              </li>
+              <li>
+                Ведіть облік кожної хвилини. Думайте наперед, як
+                сконцентруватися на результатах найважливіших завдань, за які ви
+                відповідальні
+              </li>
+            </ol>
+          </dd>
           <dt id="conclusion-20">Розвиньте відчуття крайньої необхідності.</dt>
           <dd>
             <ol>
@@ -434,7 +517,24 @@
             </ol>
           </dd>
           <dt id="conclusion-21">Виконуйте завдання по одному.</dt>
-          <dd></dd>
+          <dd>
+            <ol>
+              <li>Визначення чітких пріоритетів</li>
+              <li>
+                Працювання над найважливішим завданням доки не виконається на
+                100 %
+              </li>
+              <li>
+                Зосередження чітко й упевнено на одному завданні до повної його
+                готовності
+              </li>
+              <li>Наполегливість – це самодисципліна в дії</li>
+              <li>
+                Досягнення відчуття, що Ви можете поставити собі мету і досягти
+                її. Відтепер ви – володар власної долі
+              </li>
+            </ol>
+          </dd>
         </dl>
       </div>
     </div>
