--- a/index.html
+++ b/index.html
@@ -86,9 +86,34 @@
       <div class="theses">
         <dl>
           <dt id="conclusion-1">Накрийте на стіл.</dt>
-          <dd></dd>
+          <dd>
+            <ol>
+              <li>
+                Аналіз важливості кожної дії і складання списку найсуттєвіших.
+              </li>
+              <li>Фіксація схеми цілей на папері</li>
+              <li>
+                Розподілення завдання у часові проміжки (визначити терміни)
+              </li>
+              <li>
+                Скласти список допоміжних кроків і засобів для досягнення мети
+              </li>
+              <li>
+                Визначити пріоритети та послідовно виконувати завдання у вигляді
+                плану
+              </li>
+              <li>Негайно приступити до виконання плану</li>
+              <li>Працювати кожного дня над конкретним завданням дозовано</li>
+            </ol>
+          </dd>
           <dt id="conclusion-2">Заздалегідь плануйте кожен день.</dt>
-          <dd></dd>
+          <dd>
+            <ol>
+              <li>Скласти місячний план</li>
+              <li>Скласти тижневий план</li>
+              <li>Скласти план на день</li>
+            </ol>
+          </dd>
           <dt id="conclusion-3">До всього застосовуйте правило 80/20.</dt>
           <dd>
             <ol>
