--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div class="main">
       <div class="conclusions">
         <h1>Зроби це зараз!!!</h1>
+        <span class="scheme">
+          <a href="./files/SOFTSKILLS.pdf" class="watch">
+            Переглянути схему у PDF
+          </a>
+        </span>
         <img src="./image/book.jpg" alt="" />
         <div class="con-1">
           <a href="#conclusion-1">Накрийте на стіл.</a>
@@ -83,6 +88,7 @@
           <a href="#conclusion-21">Виконуйте завдання по одному.</a>
         </div>
       </div>
+
       <div class="theses">
         <dl>
           <dt id="conclusion-1">Накрийте на стіл.</dt>
@@ -269,9 +275,32 @@
           <dt id="conclusion-7">
             Зосередьтесь на сферах ключових результатів.
           </dt>
-          <dd></dd>
+          <dd>
+            <ol>
+              <li>
+                Визначити перелік ключових сфер і вибрати основні які
+                першочергово впливають на результат
+              </li>
+              <li>Зробити оцінку собі і знайти сильні і слабкі сторони</li>
+              <li>
+                Поставити собі мету і побудувати план в досягненні успіху в
+                ключових сферах
+              </li>
+              <li>
+                Чіткий аналіз трудового процесу у співпраці з роботодавцем та
+                колегами
+              </li>
+            </ol>
+          </dd>
           <dt id="conclusion-8">Скористайтеся законом трьох.</dt>
-          <dd></dd>
+          <dd>
+            <ol>
+              <li>Перші три завдання які ви виконуєте є основними</li>
+              <li>Розвивати тайм-менеджмент</li>
+              <li>Працюйте ефективно та продуктивно протягом робочого дня</li>
+              <li>Обов'язковий баланс між роботою та родиною</li>
+            </ol>
+          </dd>
           <dt id="conclusion-9">Перед початком ретельно готуйтесь.</dt>
           <dd>
             <p>
