--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="theses">
         <dl>
-          <dt id="conclusion-1">Накрийте на стіл.</dt>
+          <dt id="conclusion-1"><h2>Накрийте на стіл.</h2></dt>
           <dd>
             <ol>
               <li>
@@ -112,7 +112,7 @@
               <li>Працювати кожного дня над конкретним завданням дозовано</li>
             </ol>
           </dd>
-          <dt id="conclusion-2">Заздалегідь плануйте кожен день.</dt>
+          <dt id="conclusion-2"><h2>Заздалегідь плануйте кожен день.</h2></dt>
           <dd>
             <ol>
               <li>Скласти місячний план</li>
@@ -120,7 +120,7 @@
               <li>Скласти план на день</li>
             </ol>
           </dd>
-          <dt id="conclusion-3">До всього застосовуйте правило 80/20.</dt>
+          <dt id="conclusion-3"><h2>До всього застосовуйте правило 80/20.</h2></h2></dt>
           <dd>
             <ol>
               <li>
@@ -140,7 +140,7 @@
               <li>Мотивуйте себе</li>
             </ol>
           </dd>
-          <dt id="conclusion-4">Думайте про наслідки.</dt>
+          <dt id="conclusion-4"><h2>Думайте про наслідки.</h2></dt>
           <dd>
             <ol>
               <li>
@@ -171,7 +171,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-5">Займайтесь творчою прокрастинацією.</dt>
+          <dt id="conclusion-5"><h2>Займайтесь творчою прокрастинацією.</h2></dt>
           <dd>
             <ol>
               <li>
@@ -179,11 +179,11 @@
                   Приділяти більше уваги пріоритетним речам і робити швидше:
                 </p>
                 <ul>
-                  <li>слід визначити другорядні завдання також</li>
-                  <li>розставляйте правильні пріоритети</li>
+                  <li>Слід визначити другорядні завдання також</li>
+                  <li>Розставляйте правильні пріоритети</li>
                   <li>Наперед плануйте своє щоденне навантаження.</li>
                   <li>
-                    ви можете контролювати свій час та життя лише тією мірою,
+                    Ви можете контролювати свій час та життя лише тією мірою,
                     якою припиняєте діяльність низької цінності
                   </li>
                   <li>
@@ -229,7 +229,7 @@
                     Не дивіться телевізор, проводьте натомість час із родиною
                   </li>
                   <li>
-                    читайте, тренуйтесь, робіть щось, здатне підвищити якість
+                    Читайте, тренуйтесь, робіть щось, здатне підвищити якість
                     вашого життя.
                   </li>
                   <li>
@@ -246,10 +246,10 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-6">Постійно використовуйте метод АБВГД.</dt>
+          <dt id="conclusion-6"><h2>Постійно використовуйте метод АБВГД.</h2></dt>
           <dd>
             <p>
-              потужну техніку встановлення пріоритетів: почніть із переліку
+              Потужну техніку встановлення пріоритетів: почніть із переліку
               всього, що вам потрібно зробити наступного дня. На папері перед
               початком роботи розставте А, Б, В, Г, Д перед кожним пунктом:
             </p>
@@ -273,7 +273,7 @@
             </ol>
           </dd>
           <dt id="conclusion-7">
-            Зосередьтесь на сферах ключових результатів.
+            <h2>Зосередьтесь на сферах ключових результатів.</h2>
           </dt>
           <dd>
             <ol>
@@ -292,7 +292,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-8">Скористайтеся законом трьох.</dt>
+          <dt id="conclusion-8"><h2>Скористайтеся законом трьох.</h2></dt>
           <dd>
             <ol>
               <li>Перші три завдання які ви виконуєте є основними</li>
@@ -301,7 +301,7 @@
               <li>Обов'язковий баланс між роботою та родиною</li>
             </ol>
           </dd>
-          <dt id="conclusion-9">Перед початком ретельно готуйтесь.</dt>
+          <dt id="conclusion-9"><h2>Перед початком ретельно готуйтесь.</h2></dt>
           <dd>
             <p>
               Перед початком ретельно готуйтесь. До початку роботи
@@ -316,7 +316,7 @@
               <li>Єдиним способом перебороти</li>
             </ol>
           </dd>
-          <dt id="conclusion-10">Рухайтесь від бочки до бочки.</dt>
+          <dt id="conclusion-10"><h2>Рухайтесь від бочки до бочки.</h2></dt>
           <dd>
             <p>
               Рухайтесь від бочки до бочки. Найбільше й найважливіше завдання
@@ -338,7 +338,7 @@
               <li>Після цього візьміть і зробіть один крок негайно!</li>
             </ol>
           </dd>
-          <dt id="conclusion-11">Удосконалюйте свої ключові навички.</dt>
+          <dt id="conclusion-11"><h2>Удосконалюйте свої ключові навички.</h2></dt>
           <dd>
             <ol>
               <li>
@@ -363,7 +363,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-12">Використовуйте свої особливі таланти.</dt>
+          <dt id="conclusion-12"><h2>Використовуйте свої особливі таланти.</h2></dt>
           <dd>
             <ol>
               <li>
@@ -388,7 +388,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-13">Визначте основні перепони.</dt>
+          <dt id="conclusion-13"><h2>Визначте основні перепони.</h2></dt>
           <dd>
             <p>
               Визначте труднощі й важкі моменти, внутрішні та зовнішні, які
@@ -419,7 +419,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-14">Тисніть на себе.</dt>
+          <dt id="conclusion-14"><h2>Тисніть на себе.</h2></dt>
           <dd>
             <p>
               Уявіть, що вам потрібно поїхати з міста на місяць, і працюйте так,
@@ -447,7 +447,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-15">Максимізуйте свої особисті сили.</dt>
+          <dt id="conclusion-15"><h2>Максимізуйте свої особисті сили.</h2></dt>
           <dd>
             <ol>
               <li>Не викладайтесь на 100 відсотків, коли працюєте</li>
@@ -460,7 +460,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-16">Мотивуйте себе діяти.</dt>
+          <dt id="conclusion-16"><h2>Мотивуйте себе діяти.</h2></dt>
           <dd>
             <ol>
               <li>
@@ -492,7 +492,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-17">Позбудьтесь технологічного рабства.</dt>
+          <dt id="conclusion-17"><h2>Позбудьтесь технологічного рабства.</h2></dt>
           <dd>
             <ol>
               <li>
@@ -519,7 +519,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-18">Діліть завдання на частини.</dt>
+          <dt id="conclusion-18"><h2>Діліть завдання на частини.</h2></dt>
           <dd>
             <ol>
               <li>
@@ -534,7 +534,7 @@
               <li>Відразу починайте працювати, не тягніть кота за хвіст.</li>
             </ol>
           </dd>
-          <dt id="conclusion-19">Створюйте великі блоки часу.</dt>
+          <dt id="conclusion-19"><h2>Створюйте великі блоки часу.</h2></dt>
           <dd>
             <ol>
               <li>Виділіть проміжок часу на важливі завдання кожного дня</li>
@@ -552,7 +552,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-20">Розвиньте відчуття крайньої необхідності.</dt>
+          <dt id="conclusion-20"><h2>Розвиньте відчуття крайньої необхідності.</h2></dt>
           <dd>
             <ol>
               <li>Не зволікайте. «Слушний час» може ніколи не настати</li>
@@ -570,7 +570,7 @@
               </li>
             </ol>
           </dd>
-          <dt id="conclusion-21">Виконуйте завдання по одному.</dt>
+          <dt id="conclusion-21"><h2>Виконуйте завдання по одному.</h2></dt>
           <dd>
             <ol>
               <li>Визначення чітких пріоритетів</li>
